Se agrega modulo para exportar XLS por busqueda via dni y nombre

--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "connect-timeout": "1.9.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "excel-export": "0.5.1",
     "express": "~4.15.2",
+    "express-promise-router": "^2.0.0",
     "jade": "~1.11.0",
+    "json2xls": "^0.1.2",
+    "mongo-xlsx": "^1.0.12",
     "mongoose": "^4.11.13",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
