--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "~1.17.1",
     "connect-timeout": "1.9.0",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.3",
     "excel-export": "0.5.1",
     "express": "~4.15.2",
